--- a/portfolio.css
+++ b/portfolio.css
@@ -18,9 +18,10 @@ p {
 }
 
 img {
-  width: 200px;
-  max-width: 100%;
-  height: 200px;
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+  margin-bottom: 10px;
 }
 
 a {
@@ -77,22 +78,6 @@ footer {
 
 footer p {
   margin: 0;
-}
-
-#projects {
-  padding: 20px;
-}
-
-/* New CSS rule for handling multiple images */
-.project img:first-child {
-  display: block;
-  margin: 0 auto 15px auto; /* Center the first image */
-}
-
-.project img:not(:first-child) {
-  display: block;
-  max-width: 80%; /* Set maximum width for the second image */
-  margin: 0 auto 15px auto; /* Center the second image */
 }
 
 .resume-images {
