--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
 header {
   font-size: 100px;
   background-color: #bbe8e7;
-  color: #020703;
+  color: #bf39bd;
   text-align: center;
   padding: 20px;
 }
