--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,15 @@
 body {
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  transition: background-color 0.3s, color 0.3s;
   margin: 0;
   padding: 0;
+}
+
+/* Dark Mode Styles */
+body.dark-mode {
+  background-color: #121212;
+  color: #ffffff;
 }
 
 header {
@@ -13,6 +20,11 @@ header {
   color: #b963d3;
   text-align: center;
   padding: 20px;
+}
+
+body.dark-mode header {
+  background-color: #333;
+  color: #f4f4f4;
 }
 
 h1 {
@@ -24,10 +36,20 @@ h1 {
   font-size: 50px;
 }
 
+body.dark-mode main {
+  background-color: #121212;
+  color: #ffffff;
+}
+
 nav {
   background-color: #75dede;
   text-align: center;
   padding: 10px;
+}
+
+body.dark-mode nav {
+  background-color: #444;
+  color: #f4f4f4;
 }
 
 nav a {
@@ -76,6 +98,40 @@ footer {
 footer p {
   margin: 0;
   size: 50px;
+}
+
+body.dark-mode footer {
+  background-color: #222;
+  color: #f4f4f4;
+}
+
+footer p {
+  margin: 0;
+}
+
+.toggle-container {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+#dark-mode-toggle {
+  display: none;
+}
+
+#dark-mode-toggle + label {
+  cursor: pointer;
+  padding: 20px;
+  background-color: #050505;
+  color: #fff;
+  border-radius: 50%;
+  font-size: 1rem;
+  user-select: none;
+  display: inline-block;
+}
+
+#dark-mode-toggle:checked + label {
+  background-color: #effafa;
 }
 
 .header-content {
