--- a/projects.css
+++ b/projects.css
@@ -1,18 +1,20 @@
 /* projects.css */
 
 body {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Poppins", sans-serif;
   margin: 0;
   padding: 0;
   background-color: #f4f4f4;
+  color: #333;
+  transition: all 0.5s ease-in-out;
 }
 
 header {
-  background-color: #bbe8e7;
-  color: #020703;
+  background-color: #2980b9;
+  color: white;
   text-align: center;
-  padding: 10px;
+  padding: 20px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .logo {
@@ -25,24 +27,32 @@ header {
 }
 
 .nav {
-  background-color: #75dede;
+  background-color: #2c3e50;
   text-align: center;
   padding: 10px;
 }
 
 .nav a {
   text-decoration: none;
-  color: #333;
+  color: white;
   margin: 0 15px;
-  transition: color 0.3s ease;
+  padding: 10px 15px;
+  display: inline-block;
+  transition: background 0.3s, color 0.3s ease;
 }
 
 .nav a:hover {
-  color: #555;
+  background: #34495e;
+  border-radius: 5px;
 }
 
 #projects {
   padding: 20px;
+  max-width: 900px;
+  margin: auto;
+  background: white;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .project {
@@ -51,6 +61,7 @@ header {
   padding: 20px;
   margin-bottom: 20px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  text-align: center;
 }
 
 .project img {
@@ -58,23 +69,28 @@ header {
   height: auto;
   border-radius: 8px;
   margin-bottom: 15px;
+  transition: transform 0.3s;
 }
 
-/* New CSS rule for handling multiple images */
+.project img:hover {
+  transform: scale(1.05);
+}
+
 .project img:first-child {
   display: block;
-  margin: 0 auto 15px auto; /* Center the first image */
+  margin: 0 auto 15px auto;
 }
 
 .project img:not(:first-child) {
   display: block;
-  max-width: 80%; /* Set maximum width for the second image */
-  margin: 0 auto 15px auto; /* Center the second image */
+  max-width: 80%;
+  margin: 0 auto 15px auto;
 }
 
 .project h3 {
   font-size: 24px;
   margin-bottom: 10px;
+  color: #2980b9;
 }
 
 .project p {
@@ -98,8 +114,8 @@ header {
 }
 
 footer {
-  background-color: #333;
-  color: #fff;
+  background-color: #2c3e50;
+  color: white;
   text-align: center;
   padding: 20px;
 }
